k8s/envoy gateway api/envoygatewayapi.yml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: eg
spec:
  controllerName: gateway.envoyproxy.io/gatewayclass-controller
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: eg
spec:
  gatewayClassName: eg
  listeners:
    - name: http
      protocol: HTTP
      port: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: test
spec:
  parentRefs:
    - name: eg
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: apiqueries
          port: 80
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /test
          method: GET
    - backendRefs:
        - group: ""
          kind: Service
          name: apicommands
          port: 80
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /test
    - backendRefs:
        - group: ""
          kind: Service
          name: testcomponent
          port: 80
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /testcomponent
    - backendRefs:
        - group: ""
          kind: Service
          name: pwa
          port: 80
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: cors-example
spec:
  targetRef:
    group: gateway.networking.k8s.io
    kind: HTTPRoute
    name: backend
  cors:
    allowOrigins:
    - "*"
